# app_bridge

./: .gitignore  .rubocop.yml  Cargo.toml  Gemfile  README.md  Rakefile  app_bridge.gemspec
.github/: dependabot.yml
.github/workflows/: main.yml  release.yml
ext/app_bridge/: Cargo.toml  extconf.rb
ext/app_bridge/src/: app_state.rs  component.rs  error_mapping.rs  file_ops.rs  lib.rs  request_builder.rs  types.rs
ext/app_bridge/src/wrappers/: account.rs  action_context.rs  action_response.rs  app.rs  connection.rs  mod.rs  trigger_context.rs  trigger_event.rs  trigger_response.rs
ext/app_bridge/wit/: world.wit
ext/app_bridge/wit/v3/: world.wit
ext/app_bridge/wit/v4_1/: world.wit
lib/: app_bridge.rb
lib/app_bridge/: app.rb  file_processor.rb  version.rb
sig/: app_bridge.rbs
spec/: app_bridge_spec.rb  spec_helper.rb
spec/app_bridge/: account_spec.rb  app_spec.rb  backward_compatibility_spec.rb  connection_spec.rb  file_processor_spec.rb  trigger_context_spec.rb
spec/fixtures/components/: example_app.wasm  fortnox_app.wasm  wasm_component.wasm
spec/fixtures/components/example/: Cargo.toml  README.md
spec/fixtures/components/example/src/: date_utils.rs  fetch_events.rs  lib.rs
spec/fixtures/components/js_app/: README.md  package-lock.json  package.json
spec/fixtures/components/js_app/src/: action_builder.mjs  action_register.mjs  app_error.mjs  index.mjs  trigger_builder.mjs  trigger_register.mjs  utils.mjs
spec/fixtures/components/rust_app/: Cargo.toml  README.md
spec/fixtures/components/rust_app/src/: action_builder.rs  lib.rs  trigger_builder.rs
spec/fixtures/components/rust_app/src/actions/: registry.rs
spec/fixtures/components/rust_app/src/triggers/: registry.rs
spec/fixtures/components/rust_app_v3/: Cargo.toml
spec/fixtures/components/rust_app_v3/src/: lib.rs
tasks/: fixtures.rake  rust_test.rake
