[package]
name = "app_bridge"
# When updating the version, please also update the version in the
# lib/app_bridge/version.rb file to keep them in sync.
version = "2.0.1"
edition = "2021"
authors = ["Alexander Ross <ross@standout.se>"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.7.1" }
wasmtime = "32.0.0"
wasmtime-wasi = "34.0.0"
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls-vendored"] }

[dev-dependencies]
httpmock = "0.7.0"
