[package]
name = "app_bridge"
# When updating the version, please also update the version in the
# lib/app_bridge/version.rb file to keep them in sync.
version = "4.1.1"
edition = "2021"
authors = ["Alexander Ross <ross@standout.se>"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.7.1" }
wasmtime = "33.0.2"
wasmtime-wasi = "33.0.2"
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls-vendored"] }
base64 = "0.22"
infer = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
httpmock = "0.8.2"
